# lkm-empathic-pain-connectivity

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: analysis_plan.md  data_sources.md  group_interaction_explained.md  live_demo.md  presentation_5min.md  reproducibility.md  roi_to_roi_analysis.md  running_pipeline.md  seed_masks.md
docs/assets/: README.md
docs/figures/: README.md
results/: README.md  analysis_manifest_summary.tsv  fullsample_group_interaction_stats.tsv  fullsample_network_composite_stats.tsv
scripts/: 01_prepare_events.py  02_extract_confounds.py  03_make_first_level.py  04_extract_seed_timeseries.py  05_run_gppi.py  06_fit_first_level_gppi.py  07_second_level.py  README.md  define_first_level_regressors.py  extract_confounds.py  prepare_events.py  run_all_subjects.py  run_gppi.py  run_subject_pipeline.py  second_level_group_analysis.py
src/lkm_connectivity/: README.md  __init__.py  config.py  confounds.py  events.py  firstlevel.py  glm.py  gppi.py  second_level.py  secondlevel.py  seeds.py
tests/: test_batch_runners.py  test_confounds_synthetic.py  test_events_synthetic.py  test_firstlevel_synthetic.py  test_glm_synthetic.py  test_gppi_synthetic.py  test_secondlevel_synthetic.py  test_seeds_synthetic.py
